--- a/samples/sampleDynamicShape/CMakeLists.txt
+++ b/samples/sampleDynamicShape/CMakeLists.txt
@@ -6,7 +6,7 @@ target_compile_options(sampleDynamicShape PUBLIC -std=c++11 -Wall -Wno-deprecate
 target_link_libraries(sampleDynamicShape tinytrt)
 target_link_libraries(sampleDynamicShape ${LIBNVINFER})
 target_link_libraries(sampleDynamicShape ${LIBNVINFER_PLUGIN})
-target_link_libraries(sampleDynamicShape ${LIBNVPARSERS})
+# nvparsers removed in TensorRT 8.0+
 target_link_libraries(sampleDynamicShape ${LIBNVONNXPARSER})
 target_link_libraries(sampleDynamicShape ${ZLIB_LIBRARIES})
 install(TARGETS sampleDynamicShape DESTINATION ${CMAKE_INSTALL_BINDIR})
